[gd_scene load_steps=12 format=3 uid="uid://b8208rhcnhse7"]

[ext_resource type="Script" path="res://Assets/Scripts/ui.gd" id="1_1oqtc"]
[ext_resource type="FontFile" uid="uid://7wee7g8eop8f" path="res://Assets/Fonts/VarelaRound-Regular.ttf" id="1_hv7yp"]
[ext_resource type="Texture2D" uid="uid://d3dfft2m8w88w" path="res://Assets/Backgrounds/StarySky.png" id="2_766j6"]
[ext_resource type="Texture2D" uid="uid://ccbk2qr14dn6n" path="res://Assets/Backgrounds/Backdrop.PNG" id="3_l8uri"]
[ext_resource type="Script" path="res://Assets/Scripts/MessageController.gd" id="4_vtsro"]
[ext_resource type="Texture2D" uid="uid://coxx58a6vgo3m" path="res://Assets/Icons/Lavender.png" id="6_8hs7v"]
[ext_resource type="Texture2D" uid="uid://dj203dduwsh1e" path="res://Assets/Icons/Milk.png" id="7_50wdl"]
[ext_resource type="Texture2D" uid="uid://hg18c0qg1xle" path="res://Assets/Icons/Mint.png" id="8_r0sk7"]
[ext_resource type="Texture2D" uid="uid://bnqgksdc512n6" path="res://Assets/Icons/Sugar.png" id="9_jctg8"]
[ext_resource type="Texture2D" uid="uid://d1i8aguulvik1" path="res://Assets/Icons/Datura.png" id="10_ygbek"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0hq7j"]

[node name="UI" type="CanvasLayer"]
visible = false
script = ExtResource("1_1oqtc")

[node name="DreamScene" type="Node" parent="."]

[node name="DreamBackdrop" type="Sprite2D" parent="DreamScene"]
visible = false
material = SubResource("CanvasItemMaterial_0hq7j")
position = Vector2(960, 540)
rotation = 3.14159
texture = ExtResource("2_766j6")

[node name="DreamMessage" type="RichTextLabel" parent="DreamScene"]
visible = false
offset_left = 45.0
offset_top = 126.0
offset_right = 1867.0
offset_bottom = 897.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/normal_font = ExtResource("1_hv7yp")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "DREAM MESSAGE"
script = ExtResource("4_vtsro")

[node name="ContinueButton" type="Button" parent="DreamScene"]
visible = false
offset_left = 808.0
offset_top = 949.0
offset_right = 1105.0
offset_bottom = 1023.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 54
text = "CONTINUE"

[node name="ContinueTimer" type="Timer" parent="DreamScene"]
wait_time = 12.0
one_shot = true

[node name="ContinueTimerFast" type="Timer" parent="DreamScene"]
wait_time = 2.0
one_shot = true

[node name="TeaScene" type="Node" parent="."]

[node name="TeaBackdrop" type="Sprite2D" parent="TeaScene"]
visible = false
material = SubResource("CanvasItemMaterial_0hq7j")
position = Vector2(960, 540)
texture = ExtResource("3_l8uri")

[node name="TeaMessage" type="RichTextLabel" parent="TeaScene"]
visible = false
offset_left = 47.0
offset_top = 706.0
offset_right = 1875.0
offset_bottom = 994.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("1_hv7yp")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "TEA MESSAGE"
scroll_following = true
autowrap_mode = 2
script = ExtResource("4_vtsro")

[node name="BrewButton" type="Button" parent="TeaScene"]
visible = false
offset_left = 17.0
offset_top = 127.0
offset_right = 401.0
offset_bottom = 255.0
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 54
text = "BREW TEA"

[node name="IngredientButtons" type="Node" parent="TeaScene"]

[node name="Activation01" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Activation02" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Activation03" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Activation04" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Negation01" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Negation02" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Neutral01" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Neutral02" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 421.0
offset_right = 2981.0
offset_bottom = 2641.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Lavender" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 741.0
offset_top = 417.0
offset_right = 2981.0
offset_bottom = 2637.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("6_8hs7v")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Milk" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 1807.0
offset_top = 505.0
offset_right = 4047.0
offset_bottom = 2725.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("7_50wdl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Mint" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 857.0
offset_top = 416.0
offset_right = 3097.0
offset_bottom = 2636.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("8_r0sk7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sugar" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 994.0
offset_top = 504.0
offset_right = 3234.0
offset_bottom = 2724.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("9_jctg8")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Datsura" type="Button" parent="TeaScene/IngredientButtons"]
visible = false
offset_left = 1195.0
offset_top = 504.0
offset_right = 3435.0
offset_bottom = 2724.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
icon = ExtResource("10_ygbek")
flat = true
icon_alignment = 1
expand_icon = true

[node name="RitualButtons" type="Node" parent="TeaScene"]

[node name="Tea Leaves Fire" type="Button" parent="TeaScene/RitualButtons"]
visible = false
offset_left = 256.0
offset_top = 576.0
offset_right = 2048.0
offset_bottom = 2084.0
scale = Vector2(0.142923, 0.169375)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 32
icon_alignment = 1

[node name="Tea Leaves Window" type="Button" parent="TeaScene/RitualButtons"]
visible = false
offset_left = 1024.0
offset_top = 768.0
offset_right = 2816.0
offset_bottom = 2276.0
scale = Vector2(0.142641, 0.168818)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 32
icon_alignment = 1

[node name="Stir Tea" type="Button" parent="TeaScene/RitualButtons"]
visible = false
offset_left = 640.0
offset_top = 768.0
offset_right = 2432.0
offset_bottom = 2276.0
scale = Vector2(0.143005, 0.169952)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 32
icon_alignment = 1

[node name="Refill Kettle" type="Button" parent="TeaScene/RitualButtons"]
visible = false
offset_left = 1408.0
offset_top = 576.0
offset_right = 3200.0
offset_bottom = 2084.0
scale = Vector2(0.142392, 0.168742)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 32
icon_alignment = 1

[node name="MenuScene" type="Node" parent="."]

[node name="MenuBackdrop" type="Sprite2D" parent="MenuScene"]
visible = false
material = SubResource("CanvasItemMaterial_0hq7j")
position = Vector2(960, 540)
rotation = 3.14159
texture = ExtResource("2_766j6")

[node name="TITLE" type="Label" parent="MenuScene"]
visible = false
offset_top = 235.0
offset_right = 1920.0
offset_bottom = 402.0
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 128
text = "SLEEPY TIME TEA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="MenuScene"]
visible = false
offset_left = 768.0
offset_top = 664.0
offset_right = 1152.0
offset_bottom = 792.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 54
text = "START"

[node name="ExitButton" type="Button" parent="MenuScene"]
visible = false
offset_left = 768.0
offset_top = 872.0
offset_right = 1152.0
offset_bottom = 1000.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 54
text = "EXIT"

[node name="UIbuttons" type="Node" parent="."]

[node name="QuitButton" type="Button" parent="UIbuttons"]
visible = false
offset_left = 17.0
offset_top = 27.0
offset_right = 281.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_hv7yp")
theme_override_font_sizes/font_size = 54
text = "QUIT"

[connection signal="pressed" from="DreamScene/ContinueButton" to="." method="ContinueButtonPressed"]
[connection signal="timeout" from="DreamScene/ContinueTimer" to="." method="ContinueGame"]
[connection signal="timeout" from="DreamScene/ContinueTimerFast" to="." method="ContinueGame"]
[connection signal="pressed" from="TeaScene/BrewButton" to="." method="BrewButtonPressed"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Activation01" to="." method="Activation01"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Activation02" to="." method="Activation02"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Activation03" to="." method="Activation03"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Activation04" to="." method="Activation04"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Negation01" to="." method="Negation01"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Negation02" to="." method="Negation02"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Neutral01" to="." method="Neutral01"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Neutral02" to="." method="Neutral02"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Lavender" to="." method="Lavender"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Milk" to="." method="Milk"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Mint" to="." method="Mint"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Sugar" to="." method="Sugar"]
[connection signal="pressed" from="TeaScene/IngredientButtons/Datsura" to="." method="Datsura"]
[connection signal="pressed" from="MenuScene/StartButton" to="." method="StartButtonPressed"]
[connection signal="pressed" from="MenuScene/ExitButton" to="." method="ExitButtonPressed"]
[connection signal="pressed" from="UIbuttons/QuitButton" to="." method="QuitButtonPressed"]
